--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -227,6 +227,14 @@
   note = {Accessed: 02-03-2016}
 }
 
+@misc{MATT_DAVIS,
+  title="Functions for converting dates to/from JD and MJD",
+  url={https://gist.github.com/jiffyclub/1294443},
+  note = {Accessed: 02-09-2016}
+}
+
+
+
 
 % Comments:
 % Both C_RATIONAL and GNU_SOCKETS are obviously credited wrong.
